--- a/s02/jenkins/01-install/docker-compose-v1.yaml
+++ b/s02/jenkins/01-install/docker-compose-v1.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   jenkins:
     container_name: jenkins
-    image: jenkins/jenkins
+    image: jenkins/jenkins:lts-jdk17
     ports:
       - 8090:8080
     volumes:
